Add code completion support for Cypher syntax
- Implement CypherCompletionContributor for IntelliJ code completion
- Update CypherLexer and CypherTokenTypes to support completion tokens
- Register completion contributor in plugin.xml
- Update tests for new lexer and completion functionality